--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 appdirs==1.4.3
-click==6.7
-Flask==0.12.2
-gunicorn==19.7.1
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
+dj-database-url==0.4.2
+Django==1.11.1
+mysqlclient==1.3.10
 packaging==16.8
 pyparsing==2.2.0
+pytz==2017.2
 six==1.10.0
-Werkzeug==0.12.2
+whitenoise==3.3.0
